--- a/index.html
+++ b/index.html
@@ -10,162 +10,162 @@
     </head>
     <body>
 
-        <h1>silk</h1>
+        <h1>silc</h1>
 
         <h2>Grid</h2>
-        <div class="silk-grid">
-            <div class="silk-grid__col silk-grid__col--large-6">6</div>
-            <div class="silk-grid__col silk-grid__col--large-6">6</div>
+        <div class="silc-grid">
+            <div class="silc-grid__col silc-grid__col--large-6">6</div>
+            <div class="silc-grid__col silc-grid__col--large-6">6</div>
         </div>
 
-        <div class="silk-grid">
-            <div class="silk-grid__col silk-grid__col--large-4">4</div>
-            <div class="silk-grid__col silk-grid__col--large-4">4</div>
-            <div class="silk-grid__col silk-grid__col--large-4">4</div>
+        <div class="silc-grid">
+            <div class="silc-grid__col silc-grid__col--large-4">4</div>
+            <div class="silc-grid__col silc-grid__col--large-4">4</div>
+            <div class="silc-grid__col silc-grid__col--large-4">4</div>
         </div>
 
-        <div class="silk-grid">
-            <div class="silk-grid__col silk-grid__col--medium-6 silk-grid__col--large-3">3</div>
-            <div class="silk-grid__col silk-grid__col--medium-6 silk-grid__col--large-3">3</div>
-            <div class="silk-grid__col silk-grid__col--medium-6 silk-grid__col--large-3">3</div>
-            <div class="silk-grid__col silk-grid__col--medium-6 silk-grid__col--large-3">3</div>
+        <div class="silc-grid">
+            <div class="silc-grid__col silc-grid__col--medium-6 silc-grid__col--large-3">3</div>
+            <div class="silc-grid__col silc-grid__col--medium-6 silc-grid__col--large-3">3</div>
+            <div class="silc-grid__col silc-grid__col--medium-6 silc-grid__col--large-3">3</div>
+            <div class="silc-grid__col silc-grid__col--medium-6 silc-grid__col--large-3">3</div>
         </div>
 
         <h2>Accordions</h2>
         <h3>Standard</h3>
-        <div class="silk-accordion">
-            <section class="silk-accordion__section">
-                <header class="silk-accordion__header">
-                    <h2 class="silk-accordion__label">Accordion 1</h2>
+        <div class="silc-accordion">
+            <section class="silc-accordion__section">
+                <header class="silc-accordion__header">
+                    <h2 class="silc-accordion__label">Accordion 1</h2>
                 </header>
-                <div class="silk-accordion__content">
+                <div class="silc-accordion__content">
                     <p>Aenean lacinia bibendum nulla sed consectetur. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Curabitur blandit tempus porttitor. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
                 </div>
             </section>
-            <section class="silk-accordion__section">
-                <header class="silk-accordion__header">
-                    <h2 class="silk-accordion__label">Accordion 2</h2>
+            <section class="silc-accordion__section">
+                <header class="silc-accordion__header">
+                    <h2 class="silc-accordion__label">Accordion 2</h2>
                 </header>
-                <div class="silk-accordion__content">
+                <div class="silc-accordion__content">
                     <p>Aenean lacinia bibendum nulla sed consectetur. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Curabitur blandit tempus porttitor. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
                 </div>
             </section>
         </div>
 
         <h3>Become Tabs</h3>
-        <div class="silk-accordion silk-accordion--become-tabs">
-            <nav class="silk-accordion__nav">
-                <ul class="silk-accordion__nav-items">
-                    <li class="silk-silk-accordion__nav-item"><a class="silk-silk-accordion__nav-link" href="#silk-accordion-1-1">Tab 1</a></li>
-                    <li class="silk-silk-accordion__nav-item"><a class="silk-silk-accordion__nav-link" href="#silk-accordion-1-2">Tab 2</a></li>
+        <div class="silc-accordion silc-accordion--become-tabs">
+            <nav class="silc-accordion__nav">
+                <ul class="silc-accordion__nav-items">
+                    <li class="silc-silc-accordion__nav-item"><a class="silc-silc-accordion__nav-link" href="#silc-accordion-1-1">Tab 1</a></li>
+                    <li class="silc-silc-accordion__nav-item"><a class="silc-silc-accordion__nav-link" href="#silc-accordion-1-2">Tab 2</a></li>
                 </ul>
             </nav>
-            <section class="silk-accordion__section" id="silk-accordion-1-1">
-                <header class="silk-accordion__header">
-                    <h2 class="silk-accordion__label">Tab 1</h2>
+            <section class="silc-accordion__section" id="silc-accordion-1-1">
+                <header class="silc-accordion__header">
+                    <h2 class="silc-accordion__label">Tab 1</h2>
                 </header>
-                <div class="silk-accordion__content">
+                <div class="silc-accordion__content">
                     <p>Tab 1 content.</p>
                 </div>
             </section>
-            <section class="silk-accordion__section" id="silk-accordion-1-2">
-                <header class="silk-accordion__header">
-                    <h2 class="silk-accordion__label">Tab 2</h2>
+            <section class="silc-accordion__section" id="silc-accordion-1-2">
+                <header class="silc-accordion__header">
+                    <h2 class="silc-accordion__label">Tab 2</h2>
                 </header>
-                <div class="silk-accordion__content">
+                <div class="silc-accordion__content">
                     <p>Tab 2 content.</p>
                 </div>
             </section>
         </div>
 
         <h3>Tabs</h3>
-        <div class="silk-accordion silk-accordion--tabs">
-            <nav class="silk-accordion__nav">
-                <ul class="silk-accordion__nav-items">
-                    <li class="silk-silk-accordion__nav-item"><a class="silk-silk-accordion__nav-link" href="#silk-accordion-2-1">Tab 1</a></li>
-                    <li class="silk-silk-accordion__nav-item"><a class="silk-silk-accordion__nav-link" href="#silk-accordion-2-2">Tab 2</a></li>
+        <div class="silc-accordion silc-accordion--tabs">
+            <nav class="silc-accordion__nav">
+                <ul class="silc-accordion__nav-items">
+                    <li class="silc-silc-accordion__nav-item"><a class="silc-silc-accordion__nav-link" href="#silc-accordion-2-1">Tab 1</a></li>
+                    <li class="silc-silc-accordion__nav-item"><a class="silc-silc-accordion__nav-link" href="#silc-accordion-2-2">Tab 2</a></li>
                 </ul>
             </nav>
-            <section class="silk-accordion__section" id="silk-accordion-2-1">
-                <header class="silk-accordion__header">
-                    <h2 class="silk-accordion__label">Tab 1</h2>
+            <section class="silc-accordion__section" id="silc-accordion-2-1">
+                <header class="silc-accordion__header">
+                    <h2 class="silc-accordion__label">Tab 1</h2>
                 </header>
-                <div class="silk-accordion__content">
+                <div class="silc-accordion__content">
                     <p>Tab 1 content.</p>
                 </div>
             </section>
-            <section class="silk-accordion__section" id="silk-accordion-2-2">
-                <header class="silk-accordion__header">
-                    <h2 class="silk-accordion__label">Tab 2</h2>
+            <section class="silc-accordion__section" id="silc-accordion-2-2">
+                <header class="silc-accordion__header">
+                    <h2 class="silc-accordion__label">Tab 2</h2>
                 </header>
-                <div class="silk-accordion__content">
+                <div class="silc-accordion__content">
                     <p>Tab 2 content.</p>
                 </div>
             </section>
         </div>
 
         <h2>Nav</h2>
-        <nav class="silk-nav">
-            <ul class="silk-nav__items">
-                <li class="silk-nav__item">
-                    <a class="silk-nav__link" href="#">Front-end Development</a>
-                    <ul class="silk-nav__items">
-                        <li class="silk-nav__item">
-                            <a class="silk-nav__link" href="#">CSS</a>
-                            <ul class="silk-nav__items">
-                                <li class="silk-nav__item"><a class="silk-nav__link" href="#">SASS</a></li>
-                                <li class="silk-nav__item"><a class="silk-nav__link" href="#">LESS</a></li>
-                                <li class="silk-nav__item">
-                                    <a class="silk-nav__link" href="#">PostCSS</a>
-                                    <ul class="silk-nav__items">
-                                        <li class="silk-nav__item"><a class="silk-nav__link" href="#">Post 1</a></li>
-                                        <li class="silk-nav__item"><a class="silk-nav__link" href="#">Post 2</a></li>
-                                        <li class="silk-nav__item"><a class="silk-nav__link" href="#">Post 3</a></li>
+        <nav class="silc-nav">
+            <ul class="silc-nav__items">
+                <li class="silc-nav__item">
+                    <a class="silc-nav__link" href="#">Front-end Development</a>
+                    <ul class="silc-nav__items">
+                        <li class="silc-nav__item">
+                            <a class="silc-nav__link" href="#">CSS</a>
+                            <ul class="silc-nav__items">
+                                <li class="silc-nav__item"><a class="silc-nav__link" href="#">SASS</a></li>
+                                <li class="silc-nav__item"><a class="silc-nav__link" href="#">LESS</a></li>
+                                <li class="silc-nav__item">
+                                    <a class="silc-nav__link" href="#">PostCSS</a>
+                                    <ul class="silc-nav__items">
+                                        <li class="silc-nav__item"><a class="silc-nav__link" href="#">Post 1</a></li>
+                                        <li class="silc-nav__item"><a class="silc-nav__link" href="#">Post 2</a></li>
+                                        <li class="silc-nav__item"><a class="silc-nav__link" href="#">Post 3</a></li>
                                     </ul>     
                                 </li>
                             </ul>
                         </li>
-                        <li class="silk-nav__item">
-                            <a class="silk-nav__link" href="#">JavaScript</a>
-                            <ul class="silk-nav__items">
-                                <li class="silk-nav__item"><a class="silk-nav__link" href="#">TypeScript</a></li>
-                                <li class="silk-nav__item">
-                                    <a class="silk-nav__link" href="#">Babel</a>
-                                    <ul class="silk-nav__items">
-                                        <li class="silk-nav__item">
-                                            <a class="silk-nav__link" href="#">Babel 1</a>
-                                            <ul class="silk-nav__items">
-                                                <li class="silk-nav__item"><a class="silk-nav__link" href="#">Babel 1.1</a></li>
-                                                <li class="silk-nav__item"><a class="silk-nav__link" href="#">Babel 2.1</a></li>
-                                                <li class="silk-nav__item"><a class="silk-nav__link" href="#">Babel 3.1</a></li>
+                        <li class="silc-nav__item">
+                            <a class="silc-nav__link" href="#">JavaScript</a>
+                            <ul class="silc-nav__items">
+                                <li class="silc-nav__item"><a class="silc-nav__link" href="#">TypeScript</a></li>
+                                <li class="silc-nav__item">
+                                    <a class="silc-nav__link" href="#">Babel</a>
+                                    <ul class="silc-nav__items">
+                                        <li class="silc-nav__item">
+                                            <a class="silc-nav__link" href="#">Babel 1</a>
+                                            <ul class="silc-nav__items">
+                                                <li class="silc-nav__item"><a class="silc-nav__link" href="#">Babel 1.1</a></li>
+                                                <li class="silc-nav__item"><a class="silc-nav__link" href="#">Babel 2.1</a></li>
+                                                <li class="silc-nav__item"><a class="silc-nav__link" href="#">Babel 3.1</a></li>
                                             </ul>  
                                         </li>
-                                        <li class="silk-nav__item"><a class="silk-nav__link" href="#">Babel 2</a></li>
-                                        <li class="silk-nav__item"><a class="silk-nav__link" href="#">Babel 3</a></li>
+                                        <li class="silc-nav__item"><a class="silc-nav__link" href="#">Babel 2</a></li>
+                                        <li class="silc-nav__item"><a class="silc-nav__link" href="#">Babel 3</a></li>
                                     </ul>     
                                 </li>
-                                <li class="silk-nav__item"><a class="silk-nav__link" href="#">CoffeeScript</a></li>
+                                <li class="silc-nav__item"><a class="silc-nav__link" href="#">CoffeeScript</a></li>
                             </ul> 
                         </li>
                     </ul>
                 </li>
-                <li class="silk-nav__item">
-                    <a class="silk-nav__link" href="#">Back-end Development</a>
-                    <ul class="silk-nav__items">
-                        <li class="silk-nav__item">
-                            <a class="silk-nav__link" href="#">PHP</a>
-                            <ul class="silk-nav__items">
-                                <li class="silk-nav__item"><a class="silk-nav__link" href="#">WordPress</a></li>
-                                <li class="silk-nav__item"><a class="silk-nav__link" href="#">Laravel</a></li>
-                                <li class="silk-nav__item"><a class="silk-nav__link" href="#">Drupal</a></li>
+                <li class="silc-nav__item">
+                    <a class="silc-nav__link" href="#">Back-end Development</a>
+                    <ul class="silc-nav__items">
+                        <li class="silc-nav__item">
+                            <a class="silc-nav__link" href="#">PHP</a>
+                            <ul class="silc-nav__items">
+                                <li class="silc-nav__item"><a class="silc-nav__link" href="#">WordPress</a></li>
+                                <li class="silc-nav__item"><a class="silc-nav__link" href="#">Laravel</a></li>
+                                <li class="silc-nav__item"><a class="silc-nav__link" href="#">Drupal</a></li>
                             </ul>
                         </li>
-                        <li class="silk-nav__item">
-                            <a class="silk-nav__link" href="#">Ruby</a>
-                            <ul class="silk-nav__items">
-                                <li class="silk-nav__item"><a class="silk-nav__link" href="#">Something</a></li>
-                                <li class="silk-nav__item"><a class="silk-nav__link" href="#">Something else</a></li>
-                                <li class="silk-nav__item"><a class="silk-nav__link" href="#">Another thing</a></li>
+                        <li class="silc-nav__item">
+                            <a class="silc-nav__link" href="#">Ruby</a>
+                            <ul class="silc-nav__items">
+                                <li class="silc-nav__item"><a class="silc-nav__link" href="#">Something</a></li>
+                                <li class="silc-nav__item"><a class="silc-nav__link" href="#">Something else</a></li>
+                                <li class="silc-nav__item"><a class="silc-nav__link" href="#">Another thing</a></li>
                             </ul> 
                         </li>
                     </ul>
@@ -174,9 +174,9 @@
         </nav>
 
         <h2>Off Canvas</h2>
-        <a class="silk-offcanvas__trigger" href="#silk-offcanvas-1">Trigger Offcanvas</a>
-        <div class="silk-offcanvas" id="silk-offcanvas-1">
-            <a class="silk-offcanvas__trigger silk-offcanvas__trigger--close" href="#silk-offcanvas-1">Close</a>
+        <a class="silc-offcanvas__trigger" href="#silc-offcanvas-1">Trigger Offcanvas</a>
+        <div class="silc-offcanvas" id="silc-offcanvas-1">
+            <a class="silc-offcanvas__trigger silc-offcanvas__trigger--close" href="#silc-offcanvas-1">Close</a>
             <p>This is off canvas</p>
         </div>
 
