Add silc utilities library

--- a/index.html
+++ b/index.html
@@ -251,6 +251,11 @@
             </div>
         </div>
 
+        <h2>Utilities</h2>
+        <div class="silc-hide silc-display--block-medium">
+            Hidden until medium breakpoint
+        </div>
+
         <script src="./build/bundle.js"></script>
 
     </body>
