--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         </div>
 
         <h2>Utilities</h2>
-        <div class="silc-hide silc-display--block-medium">
+        <div class="silc-display--none silc-display--block-medium">
             Hidden until medium breakpoint
         </div>
 
