--- a/index.html
+++ b/index.html
@@ -10,15 +10,39 @@
     </head>
     <body>
 
-        <h1>silc</h1>
+        <h1>silc demo</h1>
 
         <h2>Grid</h2>
+
+        <h3>Basic</h3>
         <div class="silc-grid">
-            <div class="silc-grid__col silc-grid__col--large-3">
-                <div class="panel">3</div>
+            <div class="silc-grid__col silc-grid__col--6-medium silc-grid__col--3-large">
+                <div class="panel">Span 6 (medium) / Span 3 (large)</div>
             </div>
-            <div class="silc-grid__col silc-grid__col--large-3">
-                <div class="panel">3</div>
+            <div class="silc-grid__col silc-grid__col--6-medium silc-grid__col--3-large">
+                <div class="panel">Span 6 (medium) / Span 3 (large)</div>
+            </div>
+            <div class="silc-grid__col silc-grid__col--6-medium silc-grid__col--3-large">
+                <div class="panel">Span 6 (medium) / Span 3 (large)</div>
+            </div>
+            <div class="silc-grid__col silc-grid__col--6-medium silc-grid__col--3-large">
+                <div class="panel">Span 6 (medium) / Span 3 (large)</div>
+            </div>
+        </div>
+
+        <h3>No gutters</h3>
+        <div class="silc-grid silc-grid--no-gutters">
+            <div class="silc-grid__col silc-grid__col--6-small silc-grid__col--3-medium">
+                <div class="panel">4</div>
+            </div>
+            <div class="silc-grid__col silc-grid__col--6-small silc-grid__col--3-medium">
+                <div class="panel">4</div>
+            </div>
+            <div class="silc-grid__col silc-grid__col--6-small silc-grid__col--3-medium">
+                <div class="panel">4</div>
+            </div>
+            <div class="silc-grid__col silc-grid__col--6-small silc-grid__col--3-medium">
+                <div class="panel">4</div>
             </div>
         </div>
 
